--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "application-name"
+    "name": "realtime-feedbacks"
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
