--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
-    "jade": ">= 0.0.1",
-	"express": ">=2.3.0",
-	"socket.io": ">=0.6.0"
+      "jade": ">= 0.0.1"
+	, "express": ">=2.3.0"
+	, "socket.io": ">=0.6.0"
+    , "connect-mongodb": ">= 1.4.2"
+    , "mongoose": ">= 1.3.6"
+    , "node-uuid": ">= 1.2.0"
+    , "oauth": ">= 0.9.0"
   }
 }
