--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
       "jade": ">= 0.0.1"
 	, "express": ">=2.3.0"
 	, "socket.io": ">=0.6.0"
-    , "connect-mongodb": ">= 1.4.2"
+    , "connect-mongodb": "0.4.0"
     , "mongoose": ">= 1.3.6"
     , "node-uuid": ">= 1.2.0"
     , "oauth": ">= 0.9.0"
